新增一个Loading样式

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         <activity
             android:name=".SampleActivity"
             android:screenOrientation="portrait" />
+        <activity android:name=".TempActivity" />
     </application>
 
 </manifest>
