- hide set color api because: * it make my develop become hard * it is no use for user

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
         <activity
             android:name=".SampleActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".TempActivity" />
+        <activity android:name=".TempActivity"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
