--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.xiasuhuei321.sample">
 
     <application
@@ -8,7 +9,8 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
         <activity
             android:name="com.xiasuhuei321.sample.MainActivity"
             android:screenOrientation="portrait">
@@ -21,8 +23,12 @@
         <activity
             android:name=".SampleActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".TempActivity"
-            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".TempActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".TestActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
